--- a/App.config
+++ b/App.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="GroupElementsSection" type="ABTTestLibrary.Config.GroupElementsSection, ABTTestLibrary" />
-		<section name="TestElementsSection" type="ABTTestLibrary.Config.TestElementsSection, ABTTestLibrary" />
+		<section name="GroupElementsSection" type="TestLibrary.Config.GroupElementsSection, TestLibrary" />
+		<section name="TestElementsSection" type="TestLibrary.Config.TestElementsSection, TestLibrary" />
 	</configSections>
 	<appSettings>
-		<!-- Standard ABTTestLibrary Logger configuation settings, specific to the Logger sub-system.-->
+		<!-- Standard TestLibrary Logger configuation settings, specific to the Logger sub-system.-->
 		<add key="LOGGER_FileEnabled" value="true" />
 		<!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
 		<!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
-		<add key="LOGGER_FilePath" value="ABTTestLibraryLog.txt" />
+		<add key="LOGGER_FilePath" value="TestLibraryLog.txt" />
 		<!-- Text Log Paths are only relevant if LOGGER_FileEnabled is true. -->
 		<add key="LOGGER_SQLEnabled" value="false" />
 		<!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
@@ -18,7 +18,7 @@
 		<!--  SQL connection string only relevant if LOGGER_SQLEnabled is true. -->
 		<add key="LOGGER_TestEventsEnabled" value="true" />
 		<!-- See https://github.com/Amphenol-Borisch-Technologies/TestEvents -->
-		<!-- Standard ABTTestLibrary UUT configuration settings, specific to the Unit Under Test. -->
+		<!-- Standard TestLibrary UUT configuration settings, specific to the Unit Under Test. -->
 		<add key="UUT_Customer" value="UUT_Customer" />
 		<add key="UUT_Type" value="UUT_Type" />
 		<!-- Reccommended choices: { System, Unit, CCA, Component }. -->
@@ -26,7 +26,7 @@
 		<add key="UUT_Revision" value="UUT_Revision" />
 		<add key="UUT_Description" value="UUT_Description" />
 		<add key="UUT_TestSpecification" value="UUT_TestSpecification" />
-		<!-- Custom configuration settings specific to this APP, LOG or UUT, and not provided by their standard configurations from ABTTestLibrary. -->
+		<!-- Custom configuration settings specific to this APP, LOG or UUT, and not provided by their standard configurations from TestLibrary. -->
 		<!-- These settings should be initialized in a local library specific to the test program/application. -->
 		<add key="CUSTOM_SMBusAddress" value="40" />
 		<!-- System Management Bus device address, in hexadecimal format. -->
@@ -217,7 +217,7 @@
 					- Then return EventCodes.PASS from your method, else return EventCodes.FAIL.
 					- Or return any valid EventCode as applicable; e.g. EventCodes.ABORT, EventCodes.ERROR or EventCodes.UNSET.
 			- Finally, write custom code in your Test method to log the results in detail directly, using Serilog's Log.Information() method
-			  rather than ABTTestLibrary's default LogTasks.LogTest() method invoked from its Run() method.
+			  rather than TestLibrary's default LogTasks.LogTest() method invoked from its Run() method.
 				- Permits multiple measurements or operations to be performed & logged in a single Test, but with a *single* overall result.
 				- Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
