--- a/App.config
+++ b/App.config
@@ -215,7 +215,7 @@
 					- If in the set {"Alpha", "Beta", "Gamma", "Delta", "Epsilon"}
 					- Or (0 ≤ V ≤ 0.8) && (2.0 ≤ V ≤ 5.0)
 					- Then return EventCodes.PASS from your method, else return EventCodes.FAIL.
-					- Or return any valid EventCode as applicable; e.g. EventCodes.ABORT, EventCodes.ERROR or EventCodes.UNSET.
+					- Or return any valid EventCode as applicable; e.g. EventCodes.CANCEL, EventCodes.ERROR or EventCodes.UNSET.
 			- Finally, write custom code in your Test method to log the results in detail directly, using Serilog's Log.Information() method
 			  rather than TestLibrary's default LogTasks.LogTest() method invoked from its Run() method.
 				- Permits multiple measurements or operations to be performed & logged in a single Test, but with a *single* overall result.
