--- a/App.config
+++ b/App.config
@@ -21,7 +21,7 @@
 		<!-- Standard TestLibrary UUT configuration settings, specific to the Unit Under Test. -->
 		<add key="UUT_Customer" value="UUT_Customer" />
 		<add key="UUT_Type" value="UUT_Type" />
-		<!-- Reccommended choices: { System, Unit, CCA, Component }. -->
+		<!-- Recommended choices: { System, Unit, CCA, Component }. -->
 		<add key="UUT_Number" value="UUT_Number" />
 		<add key="UUT_Revision" value="UUT_Revision" />
 		<add key="UUT_Description" value="UUT_Description" />
