--- a/App.config
+++ b/App.config
@@ -172,6 +172,7 @@
 					  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
 					  only for reporting what Units their Test's measured values are in.
 	UnitType	Optional field.
+				- Recommend "" when UnitTypess aren't applicable.
 				- Examples; AC, DC, Peak, PP, RMS respectively for Alternating Current,
 				Direct Current, Peak, Peak-to-Peak, Root-Mean-Squared.
 				- NOTE: UnitTypes are purely cosmetic in function; they aren't used
