--- a/App.config
+++ b/App.config
@@ -8,12 +8,12 @@
 		<!-- Standard TestLibrary Logger configuation settings, specific to the Logger sub-system.-->
 		<add key="LOGGER_FileEnabled" value="true" />
 		<!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
-		<!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
-		<add key="LOGGER_FilePath" value="TestLibraryLog.txt" />
-		<!-- Text Log Paths are only relevant if LOGGER_FileEnabled is true. -->
+		<!-- Can choose to Log to Rich Text only, SQL only, both Rich Text & SQL or neither, depending what the Customer requires. -->
+		<add key="LOGGER_FilePath" value="LOGGER_FilePath" />
+		<!-- Rich Text Log Paths are only relevant if LOGGER_FileEnabled is true. -->
 		<add key="LOGGER_SQLEnabled" value="false" />
 		<!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
-		<!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
+		<!-- Can choose to Log to Rich Text only, SQL only, both Rich Text & SQL or neither, depending what the Customer requires. -->
 		<add key="LOGGER_SQLConnectionString" value="" />
 		<!--  SQL connection string only relevant if LOGGER_SQLEnabled is true. -->
 		<add key="LOGGER_TestEventsEnabled" value="true" />
@@ -26,6 +26,11 @@
 		<add key="UUT_Revision" value="UUT_Revision" />
 		<add key="UUT_Description" value="UUT_Description" />
 		<add key="UUT_TestSpecification" value="UUT_TestSpecification" />
+		<!-- When UUT_DocumentationFolder is a valid Windows folder path, File explorer will open the folder during TestLibrary.Form's Shown Event. -->
+		<!-- Provides convenient access to supplementary UUT or test documents that may be helpful when operating the test. -->
+		<!-- Examples are UUT test procedures, schematics, drawings, BOMs, work instructions, troubleshooting notes, etc. -->
+		<!-- Set UUT_DocumentationFolder to empty string "" to disable it's function. -->
+		<add key="UUT_DocumentationFolder" value="UUT_DocumentationFolder"/>
 		<!-- Custom configuration settings specific to this APP, LOG or UUT, and not provided by their standard configurations from TestLibrary. -->
 		<!-- These settings should be initialized in a local library specific to the test program/application. -->
 		<add key="CUSTOM_SMBusAddress" value="40" />
@@ -79,7 +84,6 @@
 					- Entry "T3|T1|T2" executed in sequence (T3, T1, T2).
 					- Entry "T1|T2|T3" executed in sequence (T1, T2, T3).
 					- Entry "T2|T3|T1" executed in sequence (T2, T3, T1).
-
 	-->
 		<GroupElements>
 			<!-- &#x9; is the tab character in XML format. -->
