--- a/App.config
+++ b/App.config
@@ -190,16 +190,11 @@
 		- LimitLow = String.Empty,	LimitHigh ≠ String.Empty, but won't parse to Double.
 		- LimitHigh = String.Empty, LimitLow  ≠ String.Empty, but won't parse to Double.
 		- LimitLow ≠ String.Empty,	LimitHigh ≠ String.Empty, neither parse to Double, & LimitLow ≠ LimitHigh.
-		
+		- LimitLow > LimitHigh & both parse to Double.
+
 	Valid Tests:
 		- LimitLow < LimitHigh & both parse to Double:
 			- Typical low & high limits, including a range of passing numeric measurements.
-		- LimitLow > LimitHigh & both parse to Double:
-			- Atypical low & high limits, excluding a range of measurements from passing..
-			- Could test if a digital voltage is an acceptable TTL signal; LimitLow = 2.0, LimitHigh = 0.8
-			  will pass if a digital voltage is not in the undefined TTL range of 0.8 to 2.0 VDC.
-			- You'd also want additional tests to confirm the voltage was ≥ 0 and ≤ 5.0 though.
-			- See "CUSTOM" Limits below.
 		- LimitLow = LimitHigh & both parse to Double:
 			- This simply means only the specific exact measurement passes.
 			- *Not recommended* due to potential roundoff when parsing String Limits & instrument measurement inaccuracies.
