--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -54,16 +54,16 @@
     <Compile Include="TestExecutive.Designer.cs">
       <DependentUpon>TestExecutive.cs</DependentUpon>
     </Compile>
-    <Compile Include="Config\ConfigGroups.cs" />
-    <Compile Include="Config\ConfigLib.cs" />
-    <Compile Include="Config\GroupSelection.cs">
+    <Compile Include="AppConfig\ConfigGroups.cs" />
+    <Compile Include="AppConfig\ConfigLib.cs" />
+    <Compile Include="AppConfig\GroupSelection.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Config\GroupSelection.Designer.cs">
+    <Compile Include="AppConfig\GroupSelection.Designer.cs">
       <DependentUpon>GroupSelection.cs</DependentUpon>
     </Compile>
     <Compile Include="Instruments\InstrumentSupport.cs" />
-    <Compile Include="Config\ConfigTests.cs" />
+    <Compile Include="AppConfig\ConfigTests.cs" />
     <Compile Include="Instruments\Keysight\E36234A.cs" />
     <Compile Include="Instruments\Keysight\E3610xB.cs" />
     <Compile Include="Instruments\Keysight\EL34143A.cs" />
@@ -83,7 +83,7 @@
       <DependentUpon>TestExecutive.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Config\GroupSelection.resx">
+    <EmbeddedResource Include="AppConfig\GroupSelection.resx">
       <DependentUpon>GroupSelection.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
