--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -40,15 +40,16 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Instruments\TexasInstruments\USB-TO-GPIO.cs" />
-    <Compile Include="SwitchMatrices\MeasurementComputing\USB_ERB24.cs" />
+    <Compile Include="ISP\Utility.cs" />
+    <Compile Include="VISA\VISA.Config.cs" />
+    <Compile Include="InterfaceAdapters\USB-TO-GPIO.cs" />
+    <Compile Include="Switching\USB_ERB24.cs" />
     <Compile Include="Logging\Logging.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="SwitchMatrices\MeasurementComputing\UL_Support.cs" />
     <Compile Include="TestExecutive.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,16 +64,16 @@
     <Compile Include="AppConfig\GroupSelection.Designer.cs">
       <DependentUpon>GroupSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="Instruments\Instrument.cs" />
+    <Compile Include="VISA\Instrument.cs" />
     <Compile Include="AppConfig\ConfigTests.cs" />
-    <Compile Include="Instruments\Keysight\E36234A.cs" />
-    <Compile Include="Instruments\Keysight\E3610xB.cs" />
-    <Compile Include="Instruments\Keysight\EL34143A.cs" />
-    <Compile Include="Instruments\Keysight\KS33509B.cs" />
-    <Compile Include="Instruments\Keysight\KS34661A.cs" />
+    <Compile Include="VISA\PS_E36234A.cs" />
+    <Compile Include="VISA\PS_E3610xB.cs" />
+    <Compile Include="VISA\EL_34143A.cs" />
+    <Compile Include="VISA\WG_33509B.cs" />
+    <Compile Include="VISA\MM_34661A.cs" />
     <Compile Include="Logging\RTFSink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Instruments\SCPI99.cs" />
+    <Compile Include="VISA\SCPI99.cs" />
     <Compile Include="TestSupport\TestSupport.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="VISA\VISA.Config.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
