--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -40,8 +40,8 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ISP\Utility.cs" />
-    <Compile Include="AppConfig\VISA.Config.cs" />
+    <Compile Include="ISP\Generic.cs" />
+    <Compile Include="AppConfig\ConfigSCPI_VISA.cs" />
     <Compile Include="InterfaceAdapters\USB-TO-GPIO.cs" />
     <Compile Include="Switching\USB_ERB24.cs" />
     <Compile Include="Logging\Logging.cs" />
@@ -64,17 +64,17 @@
     <Compile Include="AppConfig\GroupSelection.Designer.cs">
       <DependentUpon>GroupSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="VISA\Instrument.cs" />
+    <Compile Include="SCPI_VISA\Instrument.cs" />
     <Compile Include="AppConfig\ConfigTests.cs" />
-    <Compile Include="VISA\PS_E36234A.cs" />
-    <Compile Include="VISA\PS_E3610xB.cs" />
-    <Compile Include="VISA\EL_34143A.cs" />
-    <Compile Include="VISA\WG_33509B.cs" />
-    <Compile Include="VISA\MM_34661A.cs" />
+    <Compile Include="SCPI_VISA\PS_E36234A.cs" />
+    <Compile Include="SCPI_VISA\PS_E3610xB.cs" />
+    <Compile Include="SCPI_VISA\EL_34143A.cs" />
+    <Compile Include="SCPI_VISA\WG_33509B.cs" />
+    <Compile Include="SCPI_VISA\MM_34661A.cs" />
     <Compile Include="Logging\RTFSink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VISA\SCPI99.cs" />
-    <Compile Include="TestSupport\TestSupport.cs" />
+    <Compile Include="SCPI_VISA\SCPI99.cs" />
+    <Compile Include="Utility\LibrarySupport.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
