--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -40,11 +40,13 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AppConfig\ConfigLogger.cs" />
+    <Compile Include="AppConfig\ConfigUUT.cs" />
     <Compile Include="ISP\Generic.cs" />
-    <Compile Include="AppConfig\ConfigInstruments.cs" />
+    <Compile Include="AppConfig\ConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="InterfaceAdapters\USB-TO-GPIO.cs" />
     <Compile Include="Switching\USB_ERB24.cs" />
-    <Compile Include="Logging\Logging.cs" />
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -57,14 +59,13 @@
       <DependentUpon>TestExecutive.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfig\ConfigGroups.cs" />
-    <Compile Include="AppConfig\ConfigLibrary.cs" />
     <Compile Include="AppConfig\GroupSelection.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AppConfig\GroupSelection.Designer.cs">
       <DependentUpon>GroupSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="SCPI_VISA\Instrument.cs" />
+    <Compile Include="SCPI_VISA\SCPI_VISA_Instrument.cs" />
     <Compile Include="AppConfig\ConfigTests.cs" />
     <Compile Include="SCPI_VISA\PS_E36234A.cs" />
     <Compile Include="SCPI_VISA\PS_E3610xB.cs" />
