--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -73,7 +73,7 @@
     <Compile Include="SCPI_VISA\MM_34661A.cs" />
     <Compile Include="Logging\RTFSink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SCPI_VISA\SCPI99.cs" />
+    <Compile Include="SCPI_VISA\PI_SCPI99.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
