--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -46,7 +46,8 @@
     <Compile Include="AppConfig\AppConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="InterfaceAdapters\USB-TO-GPIO.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
-    <Compile Include="SCPI_VISA_Instruments\SCPI_VISA.cs" />
+    <Compile Include="SCPI_VISA_Instruments\SCPI.cs" />
+    <Compile Include="SCPI_VISA_Instruments\SCPI99.cs" />
     <Compile Include="Switching\RelayForms.cs" />
     <Compile Include="Switching\USB_ERB24.cs" />
     <Compile Include="Logging\Logger.cs" />
