--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{314614CB-6E17-4B74-A9F9-CE4699F78C9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ABT.TestLibrary</RootNamespace>
-    <AssemblyName>TestLibrary</AssemblyName>
+    <RootNamespace>ABT.TestSpace</RootNamespace>
+    <AssemblyName>TestExecutive</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
