--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -43,7 +43,6 @@
     <Compile Include="AppConfig\AppConfigUUT.cs" />
     <Compile Include="InterfaceAdapters\ISP.cs" />
     <Compile Include="AppConfig\AppConfigSCPI_VISA_Instruments.cs" />
-    <Compile Include="InterfaceAdapters\USB-TO-GPIO.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
     <Compile Include="SCPI_VISA_Instruments\SCPI.cs" />
     <Compile Include="SCPI_VISA_Instruments\SCPI99.cs" />
@@ -137,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\USB-TO-GPIO\USB-TO-GPIO.csproj">
+      <Project>{f4f8588f-cb29-4190-9c88-56837e967f20}</Project>
+      <Name>USB-TO-GPIO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
