--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -42,7 +42,7 @@
     <Compile Include="AppConfig\AppConfigLogger.cs" />
     <Compile Include="AppConfig\AppConfigUUT.cs" />
     <Compile Include="InterfaceAdapters\ISP.cs" />
-    <Compile Include="AppConfig\AppConfigSCPI_VISA_Instruments.cs" />
+    <Compile Include="SCPI_VISA_Instruments\ConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
     <Compile Include="SCPI_VISA_Instruments\SCPI.cs" />
     <Compile Include="SCPI_VISA_Instruments\SCPI99.cs" />
