--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -67,7 +67,7 @@
     <Compile Include="AppConfig\GroupSelection.Designer.cs">
       <DependentUpon>GroupSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="AppConfig\AppConfigTests.cs" />
+    <Compile Include="AppConfig\AppConfigNodesBottom.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E36234A.cs" />
     <Compile Include="SCPI_VISA_Instruments\EL_34143A.cs" />
     <Compile Include="SCPI_VISA_Instruments\WG_33509B.cs" />
