--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -61,11 +61,11 @@
       <DependentUpon>TestExecutive.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfig\AppConfigTestElements.cs" />
-    <Compile Include="AppConfig\GroupSelection.cs">
+    <Compile Include="AppConfig\SelectTests.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AppConfig\GroupSelection.Designer.cs">
-      <DependentUpon>GroupSelection.cs</DependentUpon>
+    <Compile Include="AppConfig\SelectTests.Designer.cs">
+      <DependentUpon>SelectTests.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfig\AppConfigTests.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E36234A.cs" />
@@ -84,8 +84,8 @@
       <DependentUpon>TestExecutive.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="AppConfig\GroupSelection.resx">
-      <DependentUpon>GroupSelection.cs</DependentUpon>
+    <EmbeddedResource Include="AppConfig\SelectTests.resx">
+      <DependentUpon>SelectTests.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
