--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -111,10 +111,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Serilog">
-      <HintPath>..\IsoMicro\packages\Serilog.2.12.0\lib\net47\Serilog.dll</HintPath>
+      <HintPath>P:\Test\Engineers\repos\IsoMicro\packages\Serilog.2.12.0\lib\net47\Serilog.dll</HintPath>
     </Reference>
-    <Reference Include="Serilog.Sinks.File, Version=5.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\IsoMicro\packages\Serilog.Sinks.File.5.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
+    <Reference Include="Serilog.Sinks.File">
+      <HintPath>P:\Test\Engineers\repos\IsoMicro\packages\Serilog.Sinks.File.5.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
