--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -54,7 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Switching\RelayForms.cs" />
+    <Compile Include="Switching\Relays.cs" />
     <Compile Include="Switching\USB_ERB24.cs" />
     <Compile Include="TestExecutive.cs">
       <SubType>Form</SubType>
