--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -54,9 +54,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Switching\USB_ERB\UE24_Definitions.cs" />
     <Compile Include="Switching\RelayForms.cs" />
-    <Compile Include="Switching\USB_ERB\UE24.cs" />
+    <Compile Include="Switching\USB_ERB24.cs" />
     <Compile Include="TestExecutive.cs">
       <SubType>Form</SubType>
     </Compile>
