--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -55,7 +55,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Switching\RelayForms.cs" />
-    <Compile Include="Switching\USB_ERB24.cs" />
+    <Compile Include="Switching\USB_ERB24\Relays.cs" />
+    <Compile Include="Switching\USB_ERB24\ERB24.cs" />
     <Compile Include="TestExecutive.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,5 +142,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
