--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -44,6 +44,12 @@
     <Compile Include="AppConfig\AppConfigLogger.cs" />
     <Compile Include="AppConfig\AppConfigUUT.cs" />
     <Compile Include="InSystemProgramming\ISP.cs" />
+    <Compile Include="Logging\SerialNumberControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Logging\SerialNumberControl.Designer.cs">
+      <DependentUpon>SerialNumberControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="SCPI_VISA_Instruments\ConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
     <Compile Include="SCPI_VISA_Instruments\Keysight.cs" />
@@ -79,6 +85,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Logging\SerialNumberControl.resx">
+      <DependentUpon>SerialNumberControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
