--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -44,12 +44,6 @@
     <Compile Include="AppConfig\AppConfigLogger.cs" />
     <Compile Include="AppConfig\AppConfigUUT.cs" />
     <Compile Include="Processes\ProcessExternal.cs" />
-    <Compile Include="Logging\SerialNumberControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Logging\SerialNumberControl.Designer.cs">
-      <DependentUpon>SerialNumberControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="SCPI_VISA_Instruments\ConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
     <Compile Include="SCPI_VISA_Instruments\Keysight.cs" />
@@ -85,9 +79,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Logging\SerialNumberControl.resx">
-      <DependentUpon>SerialNumberControl.cs</DependentUpon>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Logging\SerialNumber.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -141,6 +133,10 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Windows">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Windows Kits\10\UnionMetadata\10.0.22621.0\Windows.winmd</HintPath>
+    </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
