--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -43,11 +43,11 @@
   <ItemGroup>
     <Compile Include="AppConfig\AppConfigLogger.cs" />
     <Compile Include="AppConfig\AppConfigUUT.cs" />
-    <Compile Include="Logging\SerialNumber.cs">
+    <Compile Include="Logging\SerialNumberDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Logging\SerialNumber.Designer.cs">
-      <DependentUpon>SerialNumber.cs</DependentUpon>
+    <Compile Include="Logging\SerialNumberDialog.Designer.cs">
+      <DependentUpon>SerialNumberDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Processes\ProcessExternal.cs" />
     <Compile Include="SCPI_VISA_Instruments\ConfigSCPI_VISA_Instruments.cs" />
@@ -85,7 +85,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Logging\SerialNumber.resx" />
+    <EmbeddedResource Include="Logging\SerialNumberDialog.resx">
+      <DependentUpon>SerialNumberDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
