--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -46,9 +46,7 @@
     <Compile Include="Logging\SerialNumberDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Logging\SerialNumberDialog.Designer.cs">
-      <DependentUpon>SerialNumberDialog.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Logging\SerialNumberDialog.Designer.cs" />
     <Compile Include="Processes\ProcessExternal.cs" />
     <Compile Include="SCPI_VISA_Instruments\ConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
@@ -85,9 +83,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Logging\SerialNumberDialog.resx">
-      <DependentUpon>SerialNumberDialog.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -156,7 +151,6 @@
     <None Include="Logging\Honeywell Voyager 1200G User%27s Guide ReadMe.pdf" />
     <None Include="Logging\Honeywell Voyager 1200G User%27s Guide.pdf" />
     <None Include="packages.config" />
-    <None Include="Logging\LICENSE.txt" />
     <None Include="Resources\EmergencyStop.png" />
     <Content Include="Resources\BMC5486%27s PICKit4 Connector Polarity.jpg" />
     <Content Include="TestExecutive.config.xml">
